updated society name in official docs

--- a/official-documents/edit/code-of-conduct/code-of-conduct.tex
+++ b/official-documents/edit/code-of-conduct/code-of-conduct.tex
@@ -117,7 +117,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \begin{document}
 
-\title{Aberystwyth Robotics Club University Branch\\Official Documentation\\Code of Conduct}
+\title{Aberystwyth Robotics Club Undergraduate Branch\\Official Documentation\\Code of Conduct}
 \author{Tomos Fearn (tomos@aberrobotics.club)}
 \date{\parbox{\linewidth}{\centering%
   \today\endgraf\bigskip
@@ -136,12 +136,12 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 \tableofcontents
 \newpage
 
-\abstract{Code of Conduct of the Aberystwyth Robotics Club University Branch}
+\abstract{Code of Conduct of the Aberystwyth Robotics Club Undergraduate Branch}
 
 
 \section{Introduction}
 \subsection{Pledge}
-``Being totally committed to the safety of its members, the 2017/2018 Aberystwyth Robotics Club University Branch will operate so far as is reasonably practicable, in accordance with the following document, its risk assessment, its constitution, Aberystwyth University Students' Union regulations''
+``Being totally committed to the safety of its members, the 2017/2018 Aberystwyth Robotics Club Undergraduate Branch will operate so far as is reasonably practicable, in accordance with the following document, its risk assessment, its constitution, Aberystwyth University Students' Union regulations''
 
 \subsection{Appointing a new Committee}
 The society/club will appoint a new committee by the end of the summer term 2017/2018. The committee will serve for one complete academic year.
@@ -207,7 +207,7 @@ The society/club operates a procedure that allows club members to raise complain
 Complaints concerning society/club safety or operational matters should initially be addressed to the society/club President. If this does not prove satisfactory, a written complaint should be made to the Activities Officer. The matter will then be considered at the next Union Health and Safety committee meeting/ or referred to the disciplinary policy.
 
 \section{Declaration}
-As an official of the Aberystwyth University Students’ Union Aberystwyth Robotics Club University Branch, I am aware of my moral and legal obligations to my fellow student members. I have read, understood and agreed to abide by and enforce the rules of the society/club constitution, code of conduct, risk assessment and office to which I hold.
+As an official of the Aberystwyth University Students’ Union Aberystwyth Robotics Club Undergraduate Branch, I am aware of my moral and legal obligations to my fellow student members. I have read, understood and agreed to abide by and enforce the rules of the society/club constitution, code of conduct, risk assessment and office to which I hold.
 
 \begin{center}
 \begin{tabular}{ |c|c|c| } 
