--- a/official-documents/edit/constitution/constitution.tex
+++ b/official-documents/edit/constitution/constitution.tex
@@ -116,7 +116,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \begin{document}
 
-\title{Aberystwyth Robotics Club University Branch\\Official Documentation\\Constitution}
+\title{Aberystwyth Robotics Club Undergraduate Branch\\Official Documentation\\Constitution}
 \author{Tomos Fearn (tomos@aberrobotics.club)}
 \date{\parbox{\linewidth}{\centering%
   \today\endgraf\bigskip
@@ -135,18 +135,18 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 \tableofcontents
 \newpage
 
-\abstract{Constitution of the Aberystwyth Robotics Club University Branch}
+\abstract{Constitution of the Aberystwyth Robotics Club Undergraduate Branch}
 
 
 \section{General}
 \subsection{Society Name}
-The name of the society/club shall be the Aberystwyth Robotics Club University Branch and shall be allowed to be abbreviated to ARCUB. The society may also be referred to as Aberystwyth Robotics Club or abbreviated to ARC. This however is the name of the outreach club by IMPACS. For all official documentation, the society must be referred to as Aberystwyth Robotics Club University Branch.
+The name of the society/club shall be the Aberystwyth Robotics Club Undergraduate Branch and shall be allowed to be abbreviated to ARCUB. The society may also be referred to as Aberystwyth Robotics Club or abbreviated to ARC. This however is the name of the outreach club by IMPACS. For all official documentation, the society must be referred to as Aberystwyth Robotics Club Undergraduate Branch.
 
 \subsection{Previous Documentation}
 All previous Constitutions are hereby null and void.
 
 \section{The Mission}
-The mission for Aberystwyth Robotics Club University Branch shall be to inspire undergraduates to design, build and program their own robotic chassis.
+The mission for Aberystwyth Robotics Club Undergraduate Branch shall be to inspire undergraduates to design, build and program their own robotic chassis.
 
 \section{AberSU and AberSoc/Club Sporty rules}
 The society/club shall be up to date, and in compliance with all rules and regulations concerning AberSU and AberSoc/Club Sporty.
@@ -185,11 +185,11 @@ A full year membership is £5.00, this will contribute towards equipment for the
 There are two types of membership:
 
 \subsection{Standard Membership}
-Standard Membership of Aberystwyth Robotics Club University Branch shall be a Full Member of the Aberystwyth University Students’ Union, as defined by the AberSU Union Constitution (Section 6), and have paid full current membership fees to Aberystwyth Robotics Club University Branch at the set amount of £0.00 Standard Members must also hold valid AberSoc/Club Sporty membership.
+Standard Membership of Aberystwyth Robotics Club Undergraduate Branch shall be a Full Member of the Aberystwyth University Students’ Union, as defined by the AberSU Union Constitution (Section 6), and have paid full current membership fees to Aberystwyth Robotics Club Undergraduate Branch at the set amount of £0.00 Standard Members must also hold valid AberSoc/Club Sporty membership.
 
 \newpage
 \subsection{Associate Membership}
-Associate membership of Aberystwyth Robotics Club University Branch is available to non-Aberystwyth University students, who are affiliated with an individual society/sports club and thereby AberSoc/Club Sporty, on the basis of them having:
+Associate membership of Aberystwyth Robotics Club Undergraduate Branch is available to non-Aberystwyth University students, who are affiliated with an individual society/sports club and thereby AberSoc/Club Sporty, on the basis of them having:
 \begin{enumerate}[nolistsep]
   \item Expertise in a relevant area; or
   \item Honorary membership as determined by the AberSU Activities Officer; or
@@ -208,7 +208,7 @@ Anybody who does not fulfil the above criteria of `member' will be prohibited fr
 The Committee shall be made up of the following positions: President, Secretary, Treasurer.
 
 \subsection{Finance}
-The general and financial business of Aberystwyth Robotics Club University Branch shall be conducted by the committee, subject to this constitution and the view displayed by decisions members make as a whole at General Meetings.
+The general and financial business of Aberystwyth Robotics Club Undergraduate Branch shall be conducted by the committee, subject to this constitution and the view displayed by decisions members make as a whole at General Meetings.
 
 \subsection{Vacancies}
 Upon any vacancy occurring outside of normal election procedure, the Committee can vote on another member of the Committee to temporarily hold the vacant post until a by-election is held and the result is confirmed.
@@ -216,7 +216,7 @@ Upon any vacancy occurring outside of normal election procedure, the Committee c
 \newpage
 \section{Elections of Committee Members and others}
 \subsection{Elections}
-All standard members of Aberystwyth Robotics Club University Branch have the right to vote in such an election. Elections shall take place in accordance to this constitution and through the manner of the `Alternative Vote System' (or any other system that produces a majority) and held by: (either a secret ballot or a show of hands).
+All standard members of Aberystwyth Robotics Club Undergraduate Branch have the right to vote in such an election. Elections shall take place in accordance to this constitution and through the manner of the `Alternative Vote System' (or any other system that produces a majority) and held by: (either a secret ballot or a show of hands).
 
 \subsection{Handovers}
 The election shall take place no less than 14 days after the notification has been sent out to all members of the date, time and place. It shall be held usually around Easter time, as this gives outgoing society/club committees to have a chance of a shadowing/handing over period, also AberSU to offer training on various areas before the end of the academic year.
@@ -247,15 +247,15 @@ They shall be available through GitHub to all members.
 
 \section{Finance}
 \subsection{Who Looks after the Finance?}
-The finances of Aberystwyth Robotics Club University Branch shall be held primarily by the Treasurer and secondly by the President.\newline
+The finances of Aberystwyth Robotics Club Undergraduate Branch shall be held primarily by the Treasurer and secondly by the President.\newline
 The Treasurer shall manage the accounts in an annual fashion with the accounting year ending in accordance with the handover of responsibilities each year.\newline
-The Treasurer shall keep and maintain all records of Aberystwyth Robotics Club University Branch accounts before passing them on to their successor.
+The Treasurer shall keep and maintain all records of Aberystwyth Robotics Club Undergraduate Branch accounts before passing them on to their successor.
 
 \subsection{Reporting Finance}
-The Treasurer shall submit the accounts of Aberystwyth Robotics Club University Branch to the AGM.
+The Treasurer shall submit the accounts of Aberystwyth Robotics Club Undergraduate Branch to the AGM.
 
 \subsection{Where do we maintain Funds?}
-Aberystwyth Robotics Club University Branch shall maintain all of its funds within the AberSU Finance Office. All monies received shall be paid into the society/club account within the Finance Office in accordance with AberSU. All outgoing funds must have the approval of the mandate trained members.\newline
+Aberystwyth Robotics Club Undergraduate Branch shall maintain all of its funds within the AberSU Finance Office. All monies received shall be paid into the society/club account within the Finance Office in accordance with AberSU. All outgoing funds must have the approval of the mandate trained members.\newline
 All financial actions undertaken by the society/club must be in accordance with the AberSU rules, regulations and constitution.
 
 \section{Descriptions of Positions}
