--- a/official-documents/edit/initiation-policy/initiation-policy.tex
+++ b/official-documents/edit/initiation-policy/initiation-policy.tex
@@ -116,7 +116,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \begin{document}
 
-\title{Aberystwyth Robotics Club University Branch\\Official Documentation\\Initiation Policy}
+\title{Aberystwyth Robotics Club Undergraduate Branch\\Official Documentation\\Initiation Policy}
 \author{Tomos Fearn (tomos@aberrobotics.club)}
 \date{\parbox{\linewidth}{\centering%
   \today\endgraf\bigskip
